pictures alt tag modified and width and height added

--- a/index.html
+++ b/index.html
@@ -15,7 +15,13 @@
   <body>
     <main>
       <section class="main__section main__section--orange">
-        <img src="images/icon-sedans.svg " alt="Sedan" class="main__img" />
+        <img
+          src="images/icon-sedans.svg "
+          alt="Sedan Image"
+          class="main__img"
+          width="64"
+          height="40"
+        />
         <h1 class="main__h1">Sedans</h1>
         <p class="main__p">
           Choose a sedan for its affordability and excellent fuel economy. Ideal
@@ -25,7 +31,13 @@
       </section>
 
       <section class="main__section main__section--cyan">
-        <img src="images/icon-suvs.svg" alt="SUV" class="main__img" />
+        <img
+          src="images/icon-suvs.svg"
+          alt="SUV Image"
+          class="main__img"
+          width="64"
+          height="40"
+        />
         <h1 class="main__h1">SUVs</h1>
         <p class="main__p">
           Take an SUV for its spacious interior, power, and versatility. Perfect
@@ -35,7 +47,13 @@
       </section>
 
       <section class="main__section main__section--dark-cyan">
-        <img src="images/icon-luxury.svg" alt="Luxury" class="main__img" />
+        <img
+          src="images/icon-luxury.svg"
+          alt="Luxury Image"
+          class="main__img"
+          width="64"
+          height="40"
+        />
         <h1 class="main__h1">Luxury</h1>
         <p class="main__p">
           Cruise in the best car brands without the bloated prices. Enjoy the
