main class added

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <title>Frontend Mentor | 3-column preview card component</title>
   </head>
   <body>
-    <main>
+    <main class="main">
       <section class="main__section main__section--orange">
         <img
           src="images/icon-sedans.svg "
